👍 Authenticate user with jwt
